--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.Navigation {
+.navigation {
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
-.App-header {
+.app-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -13,4 +13,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.page {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #212121;
 }
