--- a/src/components/pages/login/LoginPage.css
+++ b/src/components/pages/login/LoginPage.css
@@ -1,5 +1,5 @@
-.register-form {
-    height: 320px;
+.login-form {
+    height: 280px;
     width: 320px;
     display: flex;
     justify-content: center;
@@ -9,23 +9,29 @@
     box-shadow: 6px 6px 6px 6px rgba(0, 0, 0, 0.4);
 }
 
-.register-form form {
+.login-form form {
     width: 80%;
 }
 
-.register-form h1 {
-    margin-left: 18px;
+.login-form h1 {
+    margin-left: 14px;
     color: white;
     text-align: center;
     text-decoration: underline white;
 }
 
-.register-form input {
+.login-form input {
     width: 100%;
     display: block;
-    margin: 25px 0;
+    margin-top: 25px;
 }
 
-.register-form button {
+.login-form p {
+    margin: 4px 0 20px 0;
+    text-align: right;
+    color: white;
+}
+
+.login-form button {
     width: 106%;
 }
