--- a/src/components/gui/buttons/Secondbutton.css
+++ b/src/components/gui/buttons/Secondbutton.css
@@ -5,3 +5,11 @@
     border: 2px solid #82B6DF;
     border-radius: 3px;
 }
+
+.second-button:hover {
+    background-color:rgba(130, 182, 223, 0.2);
+}
+
+.second-button:focus {
+    outline: none;
+}
