--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -1,18 +1,19 @@
 nav {
     background-color: #333333;
-    height: 55px;
-    display: flex;
     align-items: center;
+    display: flex;
+    height: 55px;
 }
 
-.title {
+.title a {
+    text-decoration: none;
     color: white;
     flex-grow: 1;
 }
 
 .title h1 {
-    text-align: left;
     margin-left: 20px;
+    text-align: left;
 }
 
 .search {
