Beitrag erstellen Seite angefangen
- Beitrag erstellen Seite angefangen zu implementieren.
- Passwort vergessen Seite angefangen zu implementieren.
- Ripple Effekt zu Mainbutton hinzugefügt (noch nicht funktionsfähig).

--- a/src/components/pages/forgotPassword/ForgotPasswordPage.css
+++ b/src/components/pages/forgotPassword/ForgotPasswordPage.css
@@ -1,6 +1,6 @@
-.login-form {
-    height: 280px;
-    width: 320px;
+.forgot-password-form {
+    height: 250px;
+    width: 450px;
     display: flex;
     justify-content: center;
     margin: 150px auto;
@@ -9,33 +9,33 @@
     box-shadow: 6px 6px 6px 6px rgba(0, 0, 0, 0.4);
 }
 
-.login-form form {
+.forgot-password-form form {
     width: 80%;
 }
 
-.login-form h1 {
+.forgot-password-form h1 {
     margin-left: 14px;
     color: white;
     text-align: center;
     text-decoration: underline white;
 }
 
-.login-form input {
-    margin-top: 25px;
+.forgot-password-form input {
+    margin-top: 45px;
     display: block;
     width: 100%;
 }
 
-.login-form p {
+.forgot-password-form p {
     margin: 4px 0 20px 0;
     text-align: right;
     color: white;
 }
 
-.login-form a {
+.forgot-password-form a {
     text-decoration: none;
 }
 
-.login-form button {
-    width: 106%;
+.forgot-password-form button {
+    width: 105%;
 }
