--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -22,10 +22,7 @@ nav {
 
 .search input {
     width: 400px;
-}
-
-.search button {
-    margin-left: 8px;
+    margin: 0 16px;
 }
 
 .login-and-register button {
