--- a/src/components/pages/createArticle/CreateArticlePage.css
+++ b/src/components/pages/createArticle/CreateArticlePage.css
@@ -25,3 +25,43 @@
 .create-article-form div {
     margin-top: 30px;
 }
+
+.create-article-form svg {
+    color: rgba(130, 182, 223, 1.0);
+}
+
+.create-article-form img {
+    width: 320px;
+    height: 180px;
+    object-fit: cover;
+    padding: 0.75rem;
+}
+
+.editor-button {
+    color: #ffffff;
+    font-size: 16px;
+    padding: 8px;
+    background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    transition: all 250ms;
+    border: none;
+}
+
+.editor-button:hover {
+    background-color: rgba(130, 182, 223, 0.7);
+}
+
+.editor-button:focus {
+    outline: none;
+}
+
+.editor-canvas {
+    background-color: rgba(255, 255, 255, 0.03);
+    width: 100%;
+    height: 200px;
+    padding: 20px 0 20px 20px;
+    font-size: 16px;
+    color: #ffffff;
+    font-family: arial;
+    line-height: 1.5em;
+}
