--- a/src/components/pages/createArticle/CreateArticlePage.css
+++ b/src/components/pages/createArticle/CreateArticlePage.css
@@ -1,6 +1,6 @@
 .create-article-form {
     width: 45%;
-    margin: 50px auto;
+    margin: 30px auto;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -13,6 +13,7 @@
 
 .create-article-form label {
     margin-bottom: 6px;
+    font-size: 18px;
     display: block;
 }
 
@@ -23,7 +24,7 @@
 }
 
 .create-article-form div {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .create-article-form svg {
@@ -39,12 +40,13 @@
 
 .editor-button {
     color: #ffffff;
-    font-size: 16px;
-    padding: 8px;
+    font-size: 18px;
+    padding: 8px 16px 3px 16px;
     background-color: rgba(255, 255, 255, 0.1);
     cursor: pointer;
     transition: all 250ms;
     border: none;
+    border-right: 1px solid black;
 }
 
 .editor-button:hover {
@@ -59,9 +61,13 @@
     background-color: rgba(255, 255, 255, 0.03);
     width: 100%;
     height: 200px;
-    padding: 20px 0 20px 20px;
+    padding: 12px 0 12px 12px;
     font-size: 16px;
     color: #ffffff;
     font-family: arial;
     line-height: 1.5em;
+}
+
+.editor-canvas:focus {
+    outline: 1px solid rgba(130, 182, 223, 1.0);
 }
