--- a/src/components/pages/articleList/ArticleListPage.css
+++ b/src/components/pages/articleList/ArticleListPage.css
@@ -3,7 +3,14 @@
     align-items: center;
     justify-content: space-between;
     width: 50%;
-    margin: 20px auto;
+    margin: 20px auto 0 auto;
+}
+
+.articlelist-filter {
+    display: flex;
+    justify-content: flex-start;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .articlelist-header h1 {
@@ -12,4 +19,21 @@
 
 .articlelist {
     padding-inline-start: 0;
+}
+
+.articlelist-filter button {
+    background-color:rgba(0, 0, 0, 0.0);
+    border: 2px solid #82B6DF;
+    border-radius: 3px;
+    padding: 2px 10px;
+    color: white;
+}
+
+.articlelist-filter button:hover {
+    background-color:rgba(130, 182, 223, 0.25);
+    cursor: pointer;
+}
+
+.articlelist-filter button:focus {
+    outline: none;
 }
