--- a/src/components/pages/articleList/listitem/listitem.css
+++ b/src/components/pages/articleList/listitem/listitem.css
@@ -1,10 +1,26 @@
 .listitem {
     width: 50%;
-    height: 120px;
     color: white;
     border: 2px solid rgba(130, 182, 223, 0.7);
     list-style-type: none;
     margin: 10px auto;
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+
+.listitem-left-section {
+    margin: 24px 0 0 20px;
+    grid-column: 1 / 2;
+}
+
+.listitem-left-section p {
+    margin: 0 10px;
+    display: inline-block;
+    text-align: center;
+}
+
+.listitem-right-section {
+    grid-column: 2 / 4;
 }
 
 .listitem a {
