--- a/src/components/pages/userprofile/profile/UserprofilePage.css
+++ b/src/components/pages/userprofile/profile/UserprofilePage.css
@@ -1,5 +1,6 @@
 .user-profile-grid-container {
     padding: 50px 5% 0 5%;
+    color: white;
     display: grid;
 }
 
@@ -10,6 +11,17 @@
 
 .overview {
     grid-column: 1 / 3;
+}
+
+.counter-stats {
+    display: flex;
+    justify-content: center;
+}
+
+.counter-stats p {
+    margin: 0 10px;
+    display: inline-block;
+    text-align: center;
 }
 
 .article-list {
