--- a/src/components/gui/inputs/textEditor/TextEditor.css
+++ b/src/components/gui/inputs/textEditor/TextEditor.css
@@ -13,7 +13,7 @@ img {
 }
 
 .editor-button {
-    color: #ffffff;
+    color: white;
     font-size: 18px;
     padding: 8px 16px 3px 16px;
     background-color: rgba(255, 255, 255, 0.1);
