--- a/src/components/pages/article/ArticlePage.css
+++ b/src/components/pages/article/ArticlePage.css
@@ -12,6 +12,13 @@
     border: 2px solid rgba(255, 255, 255, 0.1);
 }
 
+.voting-button {
+    border: none;
+    color: white;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 .article-page h1, .article-page p {
     color: white;
 }
