--- a/src/components/gui/inputs/textEditor/TextEditor.css
+++ b/src/components/gui/inputs/textEditor/TextEditor.css
@@ -12,9 +12,14 @@ img {
     padding: 0.75rem;
 }
 
+.editor-button svg {
+    color: rgba(105, 105, 255, 1.0);
+}
+
 .editor-button {
     color: white;
     font-size: 18px;
+    margin: 10px 0;
     padding: 8px 16px 3px 16px;
     background-color: rgba(255, 255, 255, 0.1);
     cursor: pointer;
@@ -35,6 +40,7 @@ img {
     background-color: rgba(255, 255, 255, 0.03);
     width: 100%;
     height: 200px;
+    margin: 20px 0;
     padding: 12px 0 12px 12px;
     font-size: 16px;
     color: #ffffff;
