--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -22,7 +22,11 @@ nav {
 
 .search input {
     width: 400px;
-    margin: 0 16px;
+    margin: 0 16px 0 0;
+}
+
+.search button {
+    margin-right: 16px;
 }
 
 .navbar-right button {
