--- a/src/components/pages/article/answeritem/Answeritem.css
+++ b/src/components/pages/article/answeritem/Answeritem.css
@@ -1,5 +1,10 @@
 .answeritem {
+    display: flex;
     margin: 10px 0;
-    padding: 0 0 0 20px;
+    padding: 20px 0 20px 20px;
     border: 2px solid rgba(255, 255, 255, 0.1);
+}
+
+.answertext {
+    margin: 10px 20px;
 }
