--- a/src/components/pages/tags/TagsPage.css
+++ b/src/components/pages/tags/TagsPage.css
@@ -1,6 +1,28 @@
 .tag-section {
+    display: grid;
+    grid-column: 1 / 5;
+    color: white;
+}
+
+.tag {
     margin: 12px 20px;
     padding: 12px 20px;
-    width: 200px;
+    width: 250px;
     border: 1px solid rgba(70, 70, 70, 1.0);
+}
+
+.tag:nth-child(4n+1) {
+    grid-column: 1 / 2;
+}
+
+.tag:nth-child(4n+2) {
+    grid-column: 2 / 3;
+}
+
+.tag:nth-child(4n+3) {
+    grid-column: 3 / 4;
+}
+
+.tag:nth-child(4n+4) {
+    grid-column: 4 / 5;
 }
