--- a/src/components/gui/buttons/Mainbutton.css
+++ b/src/components/gui/buttons/Mainbutton.css
@@ -16,7 +16,7 @@
     outline: none;
 }
 
-span {
+/*span {
     position: absolute;
     background: #fff;
     transform: translate(-50%, -50%);
@@ -36,4 +36,4 @@ span {
         height: 500px;
         opacity: 0;
     }
-}
+}*/
