--- a/src/components/pages/article/ArticlePage.css
+++ b/src/components/pages/article/ArticlePage.css
@@ -7,9 +7,19 @@
 }
 
 .article-section {
+    display: inline-block;
     margin: 10px 0;
     padding: 0 0 0 20px;
     border: 2px solid rgba(255, 255, 255, 0.1);
+}
+
+.article-section h1 {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.article-section a button {
+    margin: 0 12px 16px 0;
 }
 
 .voting-button {
