--- a/src/components/pages/createArticle/CreateArticlePage.css
+++ b/src/components/pages/createArticle/CreateArticlePage.css
@@ -35,6 +35,7 @@
 
 .create-article .main-button {
     background-color: rgba(105, 105, 255, 0.7);
+    text-align: center;
     margin-top: 16px;
-    width: 150px;
+    width: 100px;
 }
