--- a/src/components/pages/article/ArticlePage.css
+++ b/src/components/pages/article/ArticlePage.css
@@ -2,24 +2,27 @@
     display: flex;
     align-items: left;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     margin: 40px auto 0 auto;
 }
 
+.article-page h1, .article-page p {
+    color: white;
+}
+
 .article-section {
-    display: inline-block;
+    display: flex;
     margin: 10px 0;
-    padding: 0 0 0 20px;
+    padding: 12px 0 0 20px;
     border: 2px solid rgba(255, 255, 255, 0.1);
 }
 
-.article-section h1 {
-    display: inline-block;
-    margin-left: 20px;
+.article-content {
+    margin: 0 12px 12px 20px;
 }
 
 .article-section a button {
-    margin: 0 12px 16px 0;
+    margin-right: 8px;
 }
 
 .voting-button {
@@ -27,8 +30,4 @@
     color: white;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.1);
-}
-
-.article-page h1, .article-page p {
-    color: white;
 }
