Media Queries zu Beitragsseite implementiert
- Media Queries zu Beitragsseite wurden implementiert um die Seitenstruktur für Handys, Tablets und Desktops zu optimieren.
- Kleinere Design Verbesserungen wurden in der Beitragsseite implementiert.

--- a/src/components/gui/inputs/textEditor/TextEditor.css
+++ b/src/components/gui/inputs/textEditor/TextEditor.css
@@ -1,6 +1,7 @@
 label {
-    margin-bottom: 6px;
-    font-size: 18px;
+    margin: 6px 0;
+    font-size: 22px;
+    font-weight: bold;
     display: block;
     color: white;
 }
