Tag Input verbessert
- Tag Inputfeld wurde verbessert.
- Artikel List Seite wurde für Tablets und kleinere Bildschirme angepasst.

--- a/src/components/gui/inputs/textEditor/TextEditor.css
+++ b/src/components/gui/inputs/textEditor/TextEditor.css
@@ -1,4 +1,4 @@
-label {
+.editor label {
     margin: 6px 0;
     font-size: 22px;
     font-weight: bold;
@@ -6,7 +6,7 @@ label {
     color: white;
 }
 
-img {
+.editor img {
     width: 320px;
     height: 180px;
     object-fit: cover;
