--- a/src/components/gui/inputs/tagInput/TagInput.css
+++ b/src/components/gui/inputs/tagInput/TagInput.css
@@ -1,10 +1,27 @@
+.tags-input {
+	display: flex;
+}
+
 .tags-input input {
     background-color: rgba(255, 255, 255, 0.03);
     width: 280px;
-    border-radius: 6px;
     color: white;
     border: none;
     padding: 6px;
+}
+
+.tags-input button {
+	background-color: rgba(255, 255, 255, 0.03);
+	margin-left: 12px;
+	border: none;
+}
+
+.tags-input button:focus {
+	outline: 1px solid rgba(105, 105, 255, 1.0);
+}
+
+.tags-input svg {
+    color: rgba(105, 105, 255, 1.0);
 }
 
 .tags-input input:focus {
