--- a/src/components/gui/inputs/tagInput/TagInput.css
+++ b/src/components/gui/inputs/tagInput/TagInput.css
@@ -20,6 +20,10 @@
 	outline: 1px solid rgba(105, 105, 255, 1.0);
 }
 
+.tags-input button:hover {
+    cursor: pointer;
+}
+
 .tags-input svg {
     color: rgba(105, 105, 255, 1.0);
 }
