--- a/src/components/pages/article/ArticlePage.css
+++ b/src/components/pages/article/ArticlePage.css
@@ -61,6 +61,15 @@
     font-size: 14px;
 }
 
+.user-info-section a {
+    text-decoration: none;
+    color: #6389A8;
+}
+
+.user-info-section a:hover {
+    color: #386A96;
+}
+
 #create-answer-button {
     margin-bottom: 24px;
 }
