--- a/src/components/pages/articleList/listitem/listitem.css
+++ b/src/components/pages/articleList/listitem/listitem.css
@@ -22,7 +22,7 @@
 }
 
 .listitem-left-section {
-    margin: 24px 0 0 20px;
+    margin: 40px 0 0 20px;
     grid-column: 1 / 2;
 }
 
@@ -37,7 +37,16 @@
 }
 
 .listitem-right-section button {
-    margin: 0 12px 16px 0;
+    margin-right: 12px;
+}
+
+.creator-info-section {
+    margin-right: 24px;
+    text-align: right;
+}
+
+.creator-info-section p {
+    font-size: 14px;
 }
 
 .listitem a {
