--- a/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
+++ b/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
@@ -3,7 +3,11 @@
     font-size: 18px;
     font-weight: bold;
     letter-spacing: 0.5px;
-    margin: 60px 0 12px 0;
+    margin: 12px 0;
+}
+
+.email-settings-form label:first-child {
+    margin-top: 60px;
 }
 
 .email-settings-form input {
