E-Mail Adresse kann geändert werden
- Der Benutzer kann seine E-Mail Adresse ändern. Die E-Mail Adresse wird in der Datenbank und in der Auth Sektion aktualisiert.
- Fehler werden bei der E-Mail Änderung abgefangen.
- Kleinere Code Verbesserungen.

--- a/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
+++ b/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
@@ -6,6 +6,10 @@
     margin: 12px 0;
 }
 
+.email-settings-form p {
+    margin: 6px 0 16px 0;
+}
+
 .email-settings-form label:first-child {
     margin-top: 60px;
 }
