Benutzerprofil Layout verbessert
- Benutzerprofil Layout (Grid) wurde verbessert muss noch komplett umgesetzt werden auf alle betreffende Seiten.

--- a/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
+++ b/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
@@ -1,3 +1,8 @@
+.email-settings {
+    padding: 50px 5% 0 5%;
+    color: white;
+}
+
 .email-settings-form label {
     display: block;
     font-size: 18px;
