--- a/src/components/pages/userprofile/profile/UserprofilePage.css
+++ b/src/components/pages/userprofile/profile/UserprofilePage.css
@@ -10,7 +10,11 @@
 }
 
 .overview {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
+}
+
+.stats {
+    grid-column: 4 / 6;
 }
 
 .counter-stats {
@@ -25,5 +29,5 @@
 }
 
 .article-list {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
 }
