--- a/src/components/pages/userprofile/settings/profileSettings/ProfileSettingsPage.css
+++ b/src/components/pages/userprofile/settings/profileSettings/ProfileSettingsPage.css
@@ -1,3 +1,8 @@
+.profile-settings-form  {
+    margin: 0 80px; 
+    grid-column: 2 / 6;
+}
+
 .profile-settings-form label {
     display: block;
     font-size: 18px;
