--- a/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
+++ b/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
@@ -1,3 +1,10 @@
-.paper {
-    background-color: lime;
+.portfolio-timeline {
+    margin-top: 60px;
+    grid-column: 2 / 5;
+}
+
+.portfolio-timeline-content {
+    background-color: #333333;
+    padding: 10px 0 20px 10px;
+    text-align: left;
 }
