--- a/src/components/gui/buttons/mainbutton/Mainbutton.css
+++ b/src/components/gui/buttons/mainbutton/Mainbutton.css
@@ -1,14 +1,15 @@
 .main-button {
-    background-color:rgba(105, 105, 255, 1.0);
+    background-color:rgba(105, 105, 255, 0.7);
     border-radius: 3px;
     padding: 7px 20px;
-    font-weight: bold;
+    letter-spacing: 0.4px;
+    font-weight: 600;
     color: white;
     border: none;
 }
 
 .main-button:hover {
-    background-color:rgba(105, 105, 255, 0.7);
+    background-color:rgba(105, 105, 255, 0.5);
     cursor: pointer;
 }
 
