--- a/src/components/gui/buttons/tagbutton/Tagbutton.css
+++ b/src/components/gui/buttons/tagbutton/Tagbutton.css
@@ -1,13 +1,13 @@
 .tag-button {
-    background-color:rgba(70, 70, 70, 1.0);
-    border: 1px solid rgba(105, 105, 105, 1.0);
-    border-radius: 6px;
+    background-color:rgba(67, 82, 95, 1.0);
+    color: rgba(220, 220, 220, 1.0);
+    border-radius: 3px;
     padding: 4px 8px;
-    color: white;
+    border: none;
 }
 
 .tag-button:hover {
-    background-color:rgba(105, 105, 105, 0.25);
+    background-color:rgba(67, 82, 95, 0.8);
     cursor: pointer;
 }
 
