--- a/src/components/pages/article/ArticlePage.css
+++ b/src/components/pages/article/ArticlePage.css
@@ -81,3 +81,11 @@
     font-size: 13px;
     color: red;
 }
+
+.dialog-content > *, .dialog-title > * {
+    color: #DDDDDD !important;
+}
+
+.dialog-actions > * {
+    color: #698FAE !important;
+}
