--- a/src/components/pages/article/answeritem/Answeritem.css
+++ b/src/components/pages/article/answeritem/Answeritem.css
@@ -15,6 +15,15 @@
     color: #386A96;
 }
 
+.answer-content {
+    margin: 0 150px 12px 20px;
+    width: 75%;
+}
+
+.answer-content p {
+    word-wrap: break-word;
+}
+
 .answertext {
     margin: 10px 160px 10px 20px;
 }
