--- a/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
+++ b/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
@@ -5,6 +5,6 @@
 
 .portfolio-timeline-content {
     background-color: #333333;
-    padding: 10px 0 20px 10px;
+    padding: 1px 0px 1px 20px;
     text-align: left;
 }
