Passwort zurücksetzen Seite überarbeitet
- Passwort zurücksetzen Seite wurde überarbeitet für besseres UI/UX.

--- a/src/components/pages/forgotPassword/ForgotPasswordPage.css
+++ b/src/components/pages/forgotPassword/ForgotPasswordPage.css
@@ -1,5 +1,5 @@
 .forgot-password-form {
-    height: 250px;
+    height: 300px;
     width: 450px;
     display: flex;
     justify-content: center;
@@ -20,12 +20,6 @@
     text-decoration: underline white;
 }
 
-.forgot-password-form input {
-    margin-top: 45px;
-    display: block;
-    width: 100%;
-}
-
 .forgot-password-form p {
     margin: 4px 0 20px 0;
     text-align: right;
@@ -38,4 +32,9 @@
 
 .forgot-password-form button {
     width: 105%;
+}
+
+.forgot-password-text-field {
+    width: 370px !important;
+    margin-bottom: 25px !important;
 }
