--- a/src/components/pages/register/RegisterPage.css
+++ b/src/components/pages/register/RegisterPage.css
@@ -21,7 +21,7 @@
     text-decoration: underline white;
 }
 
-.text-field {
+.register-text-field {
     width: 320px !important;
     margin-bottom: 25px !important;
 }
