--- a/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
+++ b/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
@@ -1,5 +1,5 @@
 .portfolio-timeline {
-    margin-top: 60px;
+    margin-top: 30px;
     grid-column: 2 / 5;
 }
 
@@ -7,4 +7,13 @@
     background-color: #333333;
     padding: 1px 0px 1px 20px;
     text-align: left;
+}
+
+.empty-portfolio-timeline {
+    text-align: center;
+}
+
+.no-empty-portfolio-timeline {
+    margin-bottom: 30px;
+    text-align: right;
 }
