--- a/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
+++ b/src/components/pages/userprofile/settings/emailSettings/EmailSettingsPage.css
@@ -4,24 +4,12 @@
 }
 
 .email-settings-form {
-    margin: 0 80px;
+    margin: 40px 80px 0 80px; 
     grid-column: 2 / 6;
-}
-
-.email-settings-form label {
-    display: block;
-    font-size: 18px;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-    margin: 12px 0;
 }
 
 .email-settings-form p {
     margin: 6px 0 16px 0;
-}
-
-.email-settings-form label:first-child {
-    margin-top: 60px;
 }
 
 .email-settings-form input {
