Mehr Artikel laden
- Erste Versuche mehr Artikel zu laden. Ergebnis erste weitere Artikel werden geladen.

--- a/src/components/pages/articleList/ArticleListPage.css
+++ b/src/components/pages/articleList/ArticleListPage.css
@@ -60,6 +60,11 @@
     outline: none;
 }
 
+.load-more-articles a button {
+    display: flex;
+    justify-content: center;
+}
+
 .accordion {
     background-color: #333333 !important;
     width: 100%;
