Erste Filter implementiert
- Die Beitragssliste kann nun nach folgenden Kriterien gefiltert werden:
- Neuste Beiträge (Standard Einstellung)
- Bestes Voting
- Meiste Antworten
+
- Kleinere Code Verbesserungen und Bugfixing.

--- a/src/components/pages/articleList/ArticleListPage.css
+++ b/src/components/pages/articleList/ArticleListPage.css
@@ -60,9 +60,14 @@
     outline: none;
 }
 
+.load-more-articles a {
+    text-decoration: none;
+}
+
 .load-more-articles a button {
     display: flex;
     justify-content: center;
+    margin: 20px auto 50px auto;
 }
 
 .accordion {
