Benutzer Antworten anzeigen
- Alle Benutzer Antworten werden in einer Liste angezeigt mit dem Voting, Beitragstitel und Erstellungsdatum.
- Listitem wurde in Gui Ordner ausgelagert, weil diese Komponente in mehreren Codestellen benötigt wird und es so strukturierter ist.
- Kleiner Code Verbesserungen.

--- a/src/components/pages/userprofile/userActivity/UserActivityPage.css
+++ b/src/components/pages/userprofile/userActivity/UserActivityPage.css
@@ -1,3 +1,22 @@
 .user-activity-page {
     grid-column: 1 / 6;
 }
+
+.user-activity-selection {
+    margin: 0 auto;
+    text-align: left;
+}
+
+/* Tablet und Handy */
+@media (max-width: 1281px) {
+    .user-activity-selection {
+        width: 90%;
+    }
+}
+
+/* Desktop */
+@media (min-width: 1280px) {
+    .user-activity-selection {
+        width: 60%;
+    }
+}
