--- a/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
+++ b/src/components/pages/userprofile/portfolioHistory/PortfolioHistoryPage.css
@@ -14,6 +14,6 @@
 }
 
 .no-empty-portfolio-timeline {
-    margin-bottom: 30px;
-    text-align: right;
+    margin: 0 0 30px 16px;
+    text-align: left;
 }
