Button Group Sortierung hinzugefügt
- Eine Button Group für die Sortierung wurde in der Aktivtätsseite des Benutzers hinzugefügt um die verschiedenen Listen zu sortieren (noch keine Funktionalität implementiert).

--- a/src/components/pages/userprofile/userActivity/UserActivityPage.css
+++ b/src/components/pages/userprofile/userActivity/UserActivityPage.css
@@ -4,7 +4,11 @@
 
 .user-activity-selection {
     margin: 0 auto;
-    text-align: left;
+}
+
+.button-groups {
+    display: flex;
+    justify-content: space-between;
 }
 
 /* Tablet und Handy */
