--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -21,12 +21,11 @@ nav {
 }
 
 .search input {
-    width: 400px;
-    margin: 0 16px 0 0;
+    width: 450px;
 }
 
 .search button {
-    margin-right: 16px;
+    margin: 8px 16px 0 0;
 }
 
 .navbar-right button {
