Portfolio Beiträge Referenz entfernen
- Wenn ein Portfolio Beitrag gelöscht wird vom Benutzer muss beim Benutzer auch die entsprechende Referenz auf diesen Portfolio Beitrag entfernt werden.

--- a/src/components/pages/articleList/filterSettings/FilterSettings.css
+++ b/src/components/pages/articleList/filterSettings/FilterSettings.css
@@ -1,7 +1,6 @@
 .filter-settings {
     display: flex;
     justify-content: flex-start;
-    margin: 0 auto;
 }
 
 /* Tablet und Handy */
@@ -18,14 +17,8 @@
     }
 }
 
-.filter-settings p {
-    margin: 0 12px;
-    display: inline;
-    color: white;
-}
-
 .filter-settings label {
-    margin: 12px 0 4px 0;
+    margin-bottom: 4px;
     display: block;
     color: white;
 }
