--- a/src/components/gui/outputs/answerListitem/AnswerListitem.css
+++ b/src/components/gui/outputs/answerListitem/AnswerListitem.css
@@ -1,6 +1,6 @@
 .answer-list-item {
     color: white;
-    border: 2px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     list-style-type: none;
     margin: 10px auto;
     display: grid;
