--- a/src/components/gui/outputs/articleListitem/ArticleListitem.css
+++ b/src/components/gui/outputs/articleListitem/ArticleListitem.css
@@ -1,8 +1,8 @@
 .listitem {
     color: white;
-    border: 2px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     list-style-type: none;
-    margin: 10px auto;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 40% 60%;
 }
